# Snake-Game

./: .gitignore  CMakeLists.txt  Makefile  main.bat  readme.md  test.bat
include/: Constants.h  Snake.h  configure.h  constants.h  food.h  options.h  rendering.h  snake.h  utils.h
src/: FStester.c  Food.c  Snake.c  configure.c  main.c  options.c  rendering.c  snake.c  utils.c
